# recaptcha-rs

./: Cargo.toml  README.md
examples/: server.rs  verify.rs
src/: client.rs  error.rs  lib.rs
src/client/: builder.rs  secret.rs
tests/: live.rs
