[package]
name = "recaptcha"
description = "recaptcha response verification"
version = "0.5.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT"
keywords = ["recaptcha", "captcha"]
repository = "https://github.com/panicbit/recaptcha-rs"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde_derive = "1.0.106"
serde = "1.0.106"
failure = "0.1.7"
lazy_static = "1.4.0"
thiserror = "1.0.25"
url = "2.2.2"

[dev-dependencies]
serde_json = "1.0.50"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.21"
rocket = "0.5.0-rc.1"
