[package]
name = "recaptcha"
description = "recaptcha response verification"
version = "0.5.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT"
keywords = ["recaptcha", "captcha"]
repository = "https://github.com/panicbit/recaptcha-rs"
edition = "2021"

[features]

default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11.23", features = ["json"], default-features = false }
serde_derive = "1.0.106"
serde = "1.0.106"
thiserror = "1.0.52"

[dev-dependencies]
serde_json = "1.0.50"
tokio = { version = "1.35.1", features = ["macros"] }
